fix the content alignment

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,8 +2,9 @@
 @import "./core/variables";
 
 .main {
-  width: 1440px;
-  height: 1506px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 
   background: #e5ecf3;
 }
@@ -14,11 +15,11 @@
   align-items: flex-start;
 }
 
-.body {
+.content {
+  flex: 1;
   display: flex;
-  width: 1203px;
-  padding: 20px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
+}
+
+.content .side-bar {
+  width: 250px;
 }
