--- a/src/styles/dashboards/_dashboard.scss
+++ b/src/styles/dashboards/_dashboard.scss
@@ -1,9 +1,12 @@
 .body_container {
   display: flex;
-  width: 1203px;
-  padding: 20px;
+  flex: 1;
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
+
+  width: 1203px;
+  padding: 20px;
   gap: 20px;
 }
 
